[project]
name = "digilocker-smartlocker-env"
version = "0.1.0"
description = "OpenEnv environment for DigiLocker SmartLocker system"
authors = [
    { name = "Nishant", email = "your-email@example.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pyyaml",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
